--- a/templates/joobot-login.html
+++ b/templates/joobot-login.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dinero</title>
+    <title>Joobot</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -65,7 +65,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Dinero  </a>
+                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Joobot  </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -95,7 +95,7 @@
                     <div class="intro-text">
                         <span class="name">Shopping Is Easy!</span>
                         <hr class="star-light">
-                        <span class="skills">with Dinero</span>
+                        <span class="skills">with Joobot</span>
                     </div>
 					</div>
 
@@ -124,25 +124,25 @@
 <p><input class="form-control" type="password" name="password" placeholder="Password" autocomplete="off"></p>
  <!--
  <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
-<!-- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/login"><input type="submit" value="Sign-In" class="btn btn-success btn-block btn-lg"></p> -->
+<!-- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://Joobot-web.heroku.com/login"><input type="submit" value="Sign-In" class="btn btn-success btn-block btn-lg"></p> -->
      <button type="submit" class="btn btn-block btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Sign-In</button>
 </form>
 
-<form action="http://dinero-web.herokuapp.com/signup">
-<p href="http://dinero-web.herokuapp.com/signup"><input type="submit" value="Don't have an account? Sign-Up" class="btn btn-link"></p>
+<form action="http://Joobot-web.herokuapp.com/signup">
+<p href="http://Joobot-web.herokuapp.com/signup"><input type="submit" value="Don't have an account? Sign-Up" class="btn btn-link"></p>
 </form>
 
 <p style="padding-top: 15px"></p>
 
 <img src="../static/img/or.jpg">
 
-<form action="http://dinero-web.heroku.com/facebook_login" >
+<form action="http://Joobot-web.heroku.com/facebook_login" >
  <p></p>
  <button type="submit" style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In with Facebook</button>
 </form>
  
  <!--
- <a style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" href="http://dinero-web.heroku.com/facebook_login">
+ <a style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" href="http://Joobot-web.heroku.com/facebook_login">
   <span class="fa fa-facebook-square" style="padding-right:15px;"></span>
         Sign-In with Facebook
 
@@ -152,7 +152,7 @@
 
 
 <!--
-<button type="button" class="btn btn-link" formaction="http://dinero-web.herokuapp.com/signup">Sign-Up</button>
+<button type="button" class="btn btn-link" formaction="http://Joobot-web.herokuapp.com/signup">Sign-Up</button>
     
     -->
 
