--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -153,7 +153,7 @@ body {margin:0;}
             <div class="row">
                 <div class="col-lg-12 text-center">
                 	<p style="padding-top: 10px"></p>
-                    <h2>My Joo Space</h2>
+                    <h2>My Joo</h2>
                   <!--           <hr class="star-primary"> -->
                   <p style="padding-top: 5px"></p>
                   <p><b>Hello, </b>{{username}}</p>
