--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -161,7 +161,7 @@ body {margin:0;}
 	
 <div></div>
 <p style="padding-top: 50px"></p>
-<button type="button" class="btn btn-block btn-lg btn-success" data-toggle="popover" title="Coming Soon!" data-content="Here you will build & design your virtual shop for free ! Earn money in your free time !" data-placement="bottom"> Design My Shop</button>
+<button type="button" class="btn btn-block btn-lg btn-success" data-toggle="popover" title="Coming Soon!" data-content="Here you will build & design your virtual store for free ! Earn money in your free time !" data-placement="bottom"> Design My Store</button>
 
 
             </div>
