--- a/templates/index.html
+++ b/templates/index.html
@@ -175,7 +175,7 @@ body {margin:0;}
             <div class="row">
                 <div class="col-lg-12 text-center">
                 <div class="col-lg-12 text-center">
-                    <h2>Joo It!</h2>
+                    <h2>Joo Search!</h2>
                   <!--           <hr class="star-primary"> -->
 					
 <h4>Easy To Shop !</h4>
