--- a/templates/results.html
+++ b/templates/results.html
@@ -109,16 +109,16 @@ body {margin:0;}
                         <a href="#page-top"></a>
                     </li>
                        <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/joobot">Joo-Search</a>
+                        <a href="http://joobot-web.herokuapp.com/joobot">Joo-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/my-space">My-Space</a>
+                        <a href="http://joobot-web.herokuapp.com/my-space">My-Space</a>
                     </li>
                                         <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/marketplace">Joo Market Place</a>
+                        <a href="http://joobot-web.herokuapp.com/marketplace">Joo Market Place</a>
                     </li>
                                                             <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/logout">Logout</a>
+                        <a href="http://joobot-web.herokuapp.com/logout">Logout</a>
                     </li>
 
                 </ul>
@@ -177,9 +177,9 @@ body {margin:0;}
       <div class="panel-body">
       	 <div class="container">
          <div class="btn-group">
-         <a style="width: 100px;" href="http://joobot-web.heroku.com/results/cheap" class="btn btn-primary"><span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>Low-Cost</a>
-     <a style="width: 130px;" href="http://joobot-web.heroku.com/results/freeshipping" class="btn btn-primary"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span>Free Shipping</a>
-     <a style="width: 90px;" href="http://joobot-web.heroku.com/results" class="btn btn-primary"><span class="glyphicon glyphicon-random" aria-hidden="true"></span>All</a>
+         <a style="width: 100px;" href="http://joobot-web.herokuapp.com/results/cheap" class="btn btn-primary"><span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>Low-Cost</a>
+     <a style="width: 130px;" href="http://joobot-web.herokuapp.com/results/freeshipping" class="btn btn-primary"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span>Free Shipping</a>
+     <a style="width: 90px;" href="http://joobot-web.herokuapp.com/results" class="btn btn-primary"><span class="glyphicon glyphicon-random" aria-hidden="true"></span>All</a>
  </div>
            </div>
  </div>
