--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -104,18 +104,18 @@ body {margin:0;}
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/joobot">Joobot-Search</a>
+                        <a href="http://joobot-web.herokuapp.com/joobot">Joobot-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/my-space">My-Space</a>
+                        <a href="http://joobot-web.herokuapp.com/my-space">My-Space</a>
                     </li>
                     
                                         <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/marketplace">Joo Market Place</a>
+                        <a href="http://joobot-web.herokuapp.com/marketplace">Joo Market Place</a>
                     </li>
                     
                                                         <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/logout">Logout</a>
+                        <a href="http://joobot-web.herokuapp.com/logout">Logout</a>
                     </li>
                   
                 </ul>
