--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -113,16 +113,16 @@ body {margin:0;}
                         <a href="#page-top"></a>
                     </li>
                      <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/joobot">Joobot-Search</a>
+                        <a href="http://joobot-web.herokuapp.com/joobot">Joobot-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/my-space">My-Space</a>
+                        <a href="http://joobot-web.herokuapp.com/my-space">My-Space</a>
                     </li>
                                         <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/marketplace">Joo Market Place</a>
+                        <a href="http://joobot-web.herokuapp.com/marketplace">Joo Market Place</a>
                     </li>
                                                         <li class="page-scroll">
-                        <a href="http://joobot-web.heroku.com/logout">Logout</a>
+                        <a href="http://joobot-web.herokuapp.com/logout">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -152,8 +152,8 @@ body {margin:0;}
                 <tr>
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
                 <td>{{x[1]}}</td>
-                <td><form method="post" action="http://joobot-web.heroku.com/history_results/{{x[0]}}"><button type="submit" name="add" class="btn btn-primary" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Results</button></form></td>
-                <td><form method="post" action="http://joobot-web.heroku.com/history/delete/{{x[1]}}"><button type="submit" name="add" class="btn btn-danger" id="{{x[0]}}" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Deleting...">Delete</button></form></td>
+                <td><form method="post" action="http://joobot-web.herokuapp.com/history_results/{{x[0]}}"><button type="submit" name="add" class="btn btn-primary" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Results</button></form></td>
+                <td><form method="post" action="http://joobot-web.herokuapp.com/history/delete/{{x[1]}}"><button type="submit" name="add" class="btn btn-danger" id="{{x[0]}}" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Deleting...">Delete</button></form></td>
              
                 </tr>
         {% endfor %}
