--- a/templates/joobot-login.html
+++ b/templates/joobot-login.html
@@ -136,7 +136,7 @@
 
 <img src="../static/img/or.jpg">
 
-<form action="http://Joobot-web.heroku.com/facebook_login" >
+<form action="http://Joobot-web.herokuapp.com/facebook_login" >
  <p></p>
  <button type="submit" style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In with Facebook</button>
 </form>
