--- a/templates/404.html
+++ b/templates/404.html
@@ -116,9 +116,9 @@
 
 <h5>Oops ! the page you requested was not found !</h5>
 
- <form method="post" action="http://joobot-web.heroku.com/joobot" style="display: inline;" >
+ <form method="post" action="http://joobot-web.herokuapp.com/joobot" style="display: inline;" >
 
-  <center><p class="submit" style="width: 30px; height: 65px; display: inline-block;" href="http://joobot-web.heroku.com/joobot"><input type="submit" value="Return to Joobot-Search" class="btn btn-success btn-lg"></p></center>
+  <center><p class="submit" style="width: 30px; height: 65px; display: inline-block;" href="http://joobot-web.herokuapp.com/joobot"><input type="submit" value="Return to Joobot-Search" class="btn btn-success btn-lg"></p></center>
 
      </form>
 
