--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@ body {margin:0;}
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Joobot  </a>
+                <a class="navbar-brand" href="#page-top">  Joobot  </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -129,10 +129,16 @@ body {margin:0;}
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/joobot">Joobot-Search</a>
+                        <a href="http://joobot-web.herokuapp.com/joobot">Joo-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/my-space">My-Space</a>
+                        <a href="http://joobot-web.herokuapp.com/my-space">My-Joo</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="http://joobot-web.herokuapp.com/favorites">My Favorites</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="http://joobot-web.herokuapp.com/history">My History</a>
                     </li>
                                         <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/marketplace">Joo Market Place</a>
