--- a/templates/joobot-login.html
+++ b/templates/joobot-login.html
@@ -65,7 +65,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Joobot  </a>
+                <a class="navbar-brand" href="#page-top">  Joobot  </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
