--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -103,7 +103,7 @@ body {margin:0;}
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Joobot  </a>
+                <a class="navbar-brand" href="#page-top">Joobot  </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
