--- a/templates/index.html
+++ b/templates/index.html
@@ -181,6 +181,7 @@ body {margin:0;}
             <div class="row">
                 <div class="col-lg-12 text-center">
                 <div class="col-lg-12 text-center">
+                	 <p style="padding-top: 10px"></p>
                     <h2>Joo Search!</h2>
                   <!--           <hr class="star-primary"> -->
 					
@@ -188,7 +189,7 @@ body {margin:0;}
 
                                    <center><div id="load"></div></center>
 <div id="contents">
-
+ <p style="padding-top: 20px"></p>
 <form method="post" action="/search">
 <p style="padding-top: 20px"><input class="form-control" type="text" name="add" placeholder="Your Item"></p>
       <!-- icons buttons:
