--- a/templates/joobot-login.html
+++ b/templates/joobot-login.html
@@ -65,7 +65,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">  Joobot  </a>
+                <a href="#page-top" class="navbar-left" class="navbar-brand"><img src="../static/img/logo.png"></a>
+
+             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Joobot</font></a>
+
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
