--- a/templates/joobot-login-failed.html
+++ b/templates/joobot-login-failed.html
@@ -123,7 +123,7 @@
 <h5>Easy To Shop !</h5>
 
 <div class="alert alert-danger">
- <strong>Login failed!</strong> <a href="http://joobot-web.herokuapp.com" > forgot your password ? </a>
+ <strong>Login failed!</strong> <a href="http://joobot-web.herokuapp.com/login_failed" > forgot your password ? </a>
 </div>
 
  <form method="post" action="/login" style="display: inline;" >
