--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -126,7 +126,7 @@
          <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email"></p>
 
  
- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/signing"><input type="submit" value="Sign-Up" class="btn btn-success btn-block">
+ <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/send_new_pass"><input type="submit" value="Reset Password" class="btn btn-success btn-block">
 </form>
 
 
