--- a/templates/joobot-login.html
+++ b/templates/joobot-login.html
@@ -123,8 +123,8 @@
 <h5>Easy To Shop !</h5>
 
  <form method="post" action="/login" style="display: inline;" >
-         <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email" ></p>
-<p><input class="form-control" type="password" name="password" placeholder="Password" autocomplete="off"></p>
+         <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email" required></p>
+<p><input class="form-control" type="password" name="password" placeholder="Password" autocomplete="off" required></p>
  <!--
  <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
 <!-- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://Joobot-web.heroku.com/login"><input type="submit" value="Sign-In" class="btn btn-success btn-block btn-lg"></p> -->
