--- a/templates/results.html
+++ b/templates/results.html
@@ -189,7 +189,7 @@ body {margin:0;}
          <div class="btn-group">
          <a style="width: 100px;" href="http://joobot-web.herokuapp.com/results/cheap" class="btn btn-primary"><span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>Low-Cost</a>
      <a style="width: 130px;" href="http://joobot-web.herokuapp.com/results/freeshipping" class="btn btn-primary"><span class="glyphicon glyphicon-plane" aria-hidden="true"></span>Free Shipping</a>
-     <a style="width: 90px;" href="http://joobot-web.herokuapp.com/results" class="btn btn-primary"><span class="glyphicon glyphicon-random" aria-hidden="true"></span>All</a>
+     <a style="width: 90px;" href="http://joobot-web.herokuapp.com/results/all" class="btn btn-primary"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>All The Results</a>
  </div>
            </div>
  </div>
