--- a/templates/joobot-login-failed.html
+++ b/templates/joobot-login-failed.html
@@ -52,41 +52,9 @@
 </head>
 
 
-<body id="page-top" class="index">
+<body id="page-top" class="index" background="../static/img/background2.png" style="background-size: 100% 100%;">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="#page-top" class="navbar-left" class="navbar-brand"><img src="../static/img/logo.png"></a>
 
-             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Joobot</font></a>
-
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#portfolio">Login</a>
-                    </li>
-
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
 
     <!-- Header --> <!--
     <header>
@@ -107,24 +75,29 @@
     </header>
 -->
 
-
+<!--
                <center><div id="load"></div></center>
 <div id="contents">
-
+-->
     <!-- Portfolio Grid Section -->
+    <!--
     <section id="portfolio">
+        -->
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Login</h2>
+                    <p style="padding-top: 15px"></p>
+                    <h2>Joobot</h2>
                    <!--           <hr class="star-primary"> -->
 
 
-<h5>Easy To Shop !</h5>
+<h5>Easy & Fun Shopping !</h5>
 
-<div class="alert alert-danger">
- <strong>Login failed!</strong> <a href="http://joobot-web.herokuapp.com/login_failed" > forgot your password ? </a>
+                    <div class="alert alert-danger">
+ <strong>Login failed!</strong> <a href="http://joobot-web.herokuapp.com" > forgot your password ? </a>
 </div>
+
+                    <img src="../static/img/login-pic.png" height="140" width="140">
 
  <form method="post" action="/login" style="display: inline;" >
          <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email" ></p>
@@ -138,11 +111,12 @@
 <form action="http://Joobot-web.herokuapp.com/signup">
 <p href="http://Joobot-web.herokuapp.com/signup"><input type="submit" value="Don't have an account? Sign-Up" class="btn btn-link"></p>
 </form>
-
+<!--
 <p style="padding-top: 15px"></p>
-
+-->
+                    <!--
 <img src="../static/img/or.jpg">
-
+-->
 <form action="http://Joobot-web.herokuapp.com/facebook_login" >
  <p></p>
  <button type="submit" style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In with Facebook</button>
