--- a/templates/signup.html
+++ b/templates/signup.html
@@ -52,7 +52,7 @@
 </head>
 
 
-<body id="page-top" class="index">
+<body id="page-top" class="index" background="../static/img/background2.png" style="background-size: 100% 100%;">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
