--- a/templates/joobot-login-failed.html
+++ b/templates/joobot-login-failed.html
@@ -94,7 +94,7 @@
 <h5>Easy & Fun Shopping !</h5>
 
                     <div class="alert alert-danger">
- <strong>Login failed!</strong> <a href="http://joobot-web.herokuapp.com" > forgot your password ? </a>
+ <strong>Login failed!</strong> <a href="http://joobot-web.herokuapp.com/reset_password" > forgot your password ? </a>
 </div>
 
                     <img src="../static/img/login-pic.png" height="140" width="140">
