--- a/templates/after-signup.html
+++ b/templates/after-signup.html
@@ -94,7 +94,7 @@
 <h5>Easy & Fun Shopping !</h5>
 
                     <div class="alert alert-success">
- <strong>Registration mail sent!</strong> <a href="http://joobot-web.herokuapp.com" > Please verify in your mail box </a>
+ <strong>Registration mail sent!</strong> Please verify in your mail box.
 </div>
 
                     <img src="../static/img/login-pic.png" height="140" width="140">
