--- a/templates/index.html
+++ b/templates/index.html
@@ -185,7 +185,7 @@ body {margin:0;}
                 <div class="col-lg-12 text-center">
                 <div class="col-lg-12 text-center">
                 	 <p style="padding-top: 10px"></p>
-                    <h2>Joo Search!</h2>
+                    <h2>Smart Search</h2>
                   <!--           <hr class="star-primary"> -->
 					
 <h4>Easy To Shop !</h4>
