--- a/templates/404.html
+++ b/templates/404.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Joobot</title>
+    <title>Shops</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -63,9 +63,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                  <a href="#page-top" class="navbar-left" class="navbar-brand"><img src="../static/img/logo.png"></a>
+ 
 
-             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Joobot</font></a>
+             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Shops</font></a>
 
             </div>
 
@@ -121,7 +121,7 @@
 
  <form method="post" action="http://joobot-web.herokuapp.com/joobot" style="display: inline;" >
 
-  <center><p class="submit" style="width: 30px; height: 65px; display: inline-block;" href="http://joobot-web.herokuapp.com/joobot"><input type="submit" value="Return to Joobot-Search" class="btn btn-success btn-lg"></p></center>
+  <center><p class="submit" style="width: 30px; height: 65px; display: inline-block;" href="http://joobot-web.herokuapp.com/joobot"><input type="submit" value="Return to the Smart-Search" class="btn btn-success btn-lg"></p></center>
 
      </form>
 
