--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Joobot</title>
+    <title>Shops</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -118,9 +118,9 @@ body {margin:0;}
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#page-top" class="navbar-left" class="navbar-brand"><img src="../static/img/logo.png"></a>
 
-             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Joobot</font></a>
+
+             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Shops</font></a>
 
             </div>
 
@@ -214,7 +214,7 @@ body {margin:0;}
 -->
 <center>
 <div style="text-align:center;">
-<button type="submit" style="width: 300px; height: 65px; display: inline-block;" class="btn btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Joobot Searching...">Search Now</button>
+<button type="submit" style="width: 300px; height: 65px; display: inline-block;" class="btn btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i>Collecting Products...">Search Now</button>
 </div>
 </center>
 </form>
