--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/dataTables.semanticui.min.css">
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
 
-    <title>Joobot</title>
+    <title>Shops</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -100,9 +100,9 @@ body {margin:0;}
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#page-top" class="navbar-left" class="navbar-brand"><img src="../static/img/logo.png"></a>
 
-             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Joobot</font></a>
+
+             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Shops</font></a>
 
             </div>
 
