--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Joobot</title>
+    <title>Shops</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -94,9 +94,9 @@ body {margin:0;}
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                  <a href="#page-top" class="navbar-left" class="navbar-brand"><img src="../static/img/logo.png"></a>
 
-             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Joobot</font></a>
+
+             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Shops</font></a>
 
             </div>
 
