--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dinero</title>
+    <title>Shops</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -65,9 +65,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                  <a href="#page-top" class="navbar-left" class="navbar-brand"><img src="../static/img/logo.png"></a>
 
-             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Joobot</font></a>
+
+             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Shops</font></a>
 
             </div>
 
