--- a/templates/sent_new_pass.html
+++ b/templates/sent_new_pass.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Joobot</title>
+    <title>Shops</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -87,7 +87,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p style="padding-top: 15px"></p>
-                    <h2>Joobot</h2>
+                    <h2>Shops</h2>
                    <!--           <hr class="star-primary"> -->
 
 
