--- a/templates/index.html
+++ b/templates/index.html
@@ -122,8 +122,8 @@ body {margin:0;}
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+  <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Shops  </a>
 
-         <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Shops</font></a>
 
 
             </div>
