--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -102,7 +102,7 @@ body {margin:0;}
                 </button>
 
 
-             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Shops</font></a>
+             <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Shops  </a>
 
             </div>
 
