--- a/templates/signup.html
+++ b/templates/signup.html
@@ -66,7 +66,7 @@
                     <span class="icon-bar"></span>
                 </button>
 
-             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Shops</font></a>
+             <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Shops  </a>
 
             </div>
 
