--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -67,7 +67,7 @@
                 </button>
 
 
-             <a class=navbar-right class="navbar-brand href="#page-top"><font size="4">Shops</font></a>
+            <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Shops  </a>
 
             </div>
 
