--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,8 @@ body {margin:0;}
 .icon_bar a {
     width: 20%;
     float: left;
-    transition: all 0.1s ease;
+    padding: 12px 0;
+    transition: all 0.3s ease;
     color: white;
     font-size: 36px;
 }
