main menu categories changed

--- a/templates/index.html
+++ b/templates/index.html
@@ -136,10 +136,10 @@ body {margin:0;}
                         <a href="#page-top"></a>
                     </li>
                        <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/joobot">Joo-Search</a>
+                        <a href="http://joobot-web.herokuapp.com/joobot">Smart-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/my-space">My-Joo</a>
+                        <a href="http://joobot-web.herokuapp.com/my-space">My-Space</a>
                     </li>
                     
                       <li class="page-scroll">
@@ -149,7 +149,7 @@ body {margin:0;}
                         <a href="http://joobot-web.herokuapp.com/history">My History</a>
                     </li>
                                         <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/marketplace">Joo Market Place</a>
+                        <a href="http://joobot-web.herokuapp.com/marketplace">Market Place</a>
                     </li>
                                                             <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/logout">Logout</a>
