--- a/templates/market.html
+++ b/templates/market.html
@@ -112,10 +112,10 @@ body {margin:0;}
                         <a href="#page-top"></a>
                     </li>
                        <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/joobot">Joo-Search</a>
+                        <a href="http://joobot-web.herokuapp.com/joobot">Smart-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/my-space">My-Joo</a>
+                        <a href="http://joobot-web.herokuapp.com/my-space">My-Space</a>
                     </li>
                       <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/favorites">My Favorites</a>
@@ -124,7 +124,7 @@ body {margin:0;}
                         <a href="http://joobot-web.herokuapp.com/history">My History</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/marketplace">Joobot Market Place</a>
+                        <a href="http://joobot-web.herokuapp.com/marketplace">Market Place</a>
                     </li>
                                                         <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/logout">Logout</a>
@@ -142,7 +142,7 @@ body {margin:0;}
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Joo Market Place</h2>
+                    <h2>Market Place</h2>
          <!--           <hr class="star-primary"> -->
 					
 <h5>Coming Soon...</h5>
