--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -116,10 +116,10 @@ body {margin:0;}
                         <a href="#page-top"></a>
                     </li>
                      <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/joobot">Joo-Search</a>
+                        <a href="http://joobot-web.herokuapp.com/joobot">Smart-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/my-space">My-Joo</a>
+                        <a href="http://joobot-web.herokuapp.com/my-space">My-Space</a>
                     </li>
                       <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/favorites">My Favorites</a>
@@ -128,7 +128,7 @@ body {margin:0;}
                         <a href="http://joobot-web.herokuapp.com/history">My History</a>
                     </li>
                                         <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/marketplace">Joo Market Place</a>
+                        <a href="http://joobot-web.herokuapp.com/marketplace">Market Place</a>
                     </li>
                                                         <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/logout">Logout</a>
