--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -107,10 +107,10 @@ body {margin:0;}
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/joobot">Joo-Search</a>
+                        <a href="http://joobot-web.herokuapp.com/joobot">Smart-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/my-space">My-Joo</a>
+                        <a href="http://joobot-web.herokuapp.com/my-space">My-Space</a>
                     </li>
                       <li class="page-scroll">
                         <a href="http://joobot-web.herokuapp.com/favorites">My Favorites</a>
@@ -120,7 +120,7 @@ body {margin:0;}
                     </li>
                     
                                         <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/marketplace">Joo Market Place</a>
+                        <a href="http://joobot-web.herokuapp.com/marketplace">Market Place</a>
                     </li>
                     
                                                         <li class="page-scroll">
@@ -162,7 +162,7 @@ body {margin:0;}
             <div class="row">
                 <div class="col-lg-12 text-center">
                 	<p style="padding-top: 10px"></p>
-                    <h2>My Joo</h2>
+                    <h2>My Space</h2>
                   <!--           <hr class="star-primary"> -->
                   <p style="padding-top: 5px"></p>
                   <p><b>Hello, </b>{{username}}</p>
