shopping-cart logo - removed

--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -102,7 +102,7 @@ body {margin:0;}
                 </button>
 
 
-             <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Shops  </a>
+             <a class="navbar-brand" href="#page-top">  Shops  </a>
 
             </div>
 
