--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@ body {margin:0;}
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-  <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Shops  </a>
+  <a class="navbar-brand" href="#page-top">  Shops  </a>
 
 
 
