--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -67,7 +67,7 @@
                 </button>
 
 
-            <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Shops  </a>
+            <a class="navbar-brand" href="#page-top">  Shops  </a>
 
             </div>
 
