--- a/templates/sent_new_pass.html
+++ b/templates/sent_new_pass.html
@@ -97,7 +97,9 @@
  <strong>Reset password mail sent!</strong> Please open your mail box.
 </div>
 
-                    <img src="../static/img/login-pic.png" height="140" width="140">
+                     <!--   <img src="../static/img/login-pic.png" height="160" width="160"> -->
+
+                         <img src="../static/img/shops-pic.png" height="160" width="160">
 
  <form method="post" action="/login" style="display: inline;" >
          <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email" ></p>
