--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -166,6 +166,8 @@ body {margin:0;}
                   <!--           <hr class="star-primary"> -->
                   <p style="padding-top: 5px"></p>
                   <p><b>Hello, </b>{{username}}</p>
+
+                    <img src={{ image }} height="160" width="160" class="img-circle">
      
 	
 <div></div>
