--- a/templates/index.html
+++ b/templates/index.html
@@ -219,7 +219,7 @@ body {margin:0;}
 -->
 <center>
 <div style="text-align:center;">
-<button type="submit" style="width: 300px; height: 65px; display: inline-block;" class="btn btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i>Collecting Products...">Search Now</button>
+<button type="submit" style="width: 200px; height: 60px; display: inline-block;" class="btn btn-info btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i>Collecting Products...">Search Now</button>
 </div>
 </center>
 </form>
