--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@ body {margin:0;}
 	bottom: 0;
 	width: 100%;
     text-align: center;
-    background-color: #233140;
+    background-color: #00BFFF;
     overflow: auto;
     z-index: 99999;
 }
@@ -60,7 +60,7 @@ body {margin:0;}
 }
 
 .active {
-    background-color: #18BC9C !important;
+    background-color: #58D3F7 !important;
 }
 </style>
     <!-- style tag for icons -->
