--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -36,20 +36,21 @@
          <link rel="stylesheet" type="text/css" href="../static/DataTables/datatables.css">
   <style>
 body {margin:0;}
+
 .icon_bar {
 	position: fixed;
    
 	bottom: 0;
 	width: 100%;
     text-align: center;
-    background-color: #233140;
+    background-color: #00BFFF;
     overflow: auto;
     z-index: 99999;
 }
 .icon_bar a {
     width: 20%;
-    padding: 12px 0;
     float: left;
+    padding: 12px 0;
     transition: all 0.3s ease;
     color: white;
     font-size: 36px;
@@ -58,7 +59,7 @@ body {margin:0;}
     background-color: #000;
 }
 .active {
-    background-color: #18BC9C !important;
+    background-color: #58D3F7 !important;
 }
 </style>
   
