--- a/templates/results.html
+++ b/templates/results.html
@@ -231,11 +231,11 @@ body {margin:0;}
 <td>
                   <div class="btn-group-justified">
     <div class="btn-group">
-                  <form action={{x[3]}} target="_blank"><button type="submit" class="btn btn-primary" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Opening...">Open in {{ x[5] }}</button>
+                  <form action={{x[3]}} target="_blank"><button type="submit" class="btn btn-primary" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Opening..."><i class="fa fa-external-link" aria-hidden="true"></i>Open in {{ x[5] }}</button>
                 </form>
         </div>
 <div class="btn-group">
-                <form action="http://joobot-web.herokuapp.com/results/add_to_favorites/{{x[6]}}"><button type="submit" class="btn btn-success" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> ♥">Like</button></form>
+                <form action="http://joobot-web.herokuapp.com/results/add_to_favorites/{{x[6]}}"><button type="submit" class="btn btn-success" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i>"><i class="fa fa-thumbs-up" aria-hidden="true"></i>Like</button></form>
           </div>
           </div>
             </td>
