--- a/templates/results.html
+++ b/templates/results.html
@@ -216,7 +216,7 @@ body {margin:0;}
       {% for x in list %}
 
             <tr>
-                <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
+                <td><big><b> <font color="#000">{{x[0]}}</font></big></td></b>
                 <td><b>Price:</b> {{x[1]}}$</td>
                 <td><b>Shipping:</b> {{x[2]}}$</td>
   <!--  <td><div class="img-thumbnail"><img src={{x[4]}} id="myImg" height="120" width="120"></div></td> -->
