--- a/templates/joobot-login.html
+++ b/templates/joobot-login.html
@@ -103,7 +103,7 @@
  <!--
  <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
 <!-- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://Joobot-web.heroku.com/login"><input type="submit" value="Sign-In" class="btn btn-success btn-block btn-lg"></p> -->
-     <button type="submit" class="btn btn-block btn-success btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Sign-In</button>
+     <button type="submit" class="btn btn-block btn-info btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Sign-In</button>
 </form>
 
 <form action="http://Joobot-web.herokuapp.com/signup">
@@ -117,7 +117,7 @@
 -->
 <form action="http://Joobot-web.herokuapp.com/facebook_login" >
  <p></p>
- <button type="submit" style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In with Facebook</button>
+ <button type="submit" style="background-color:#3B5998; border-color:#3B5998; color:#fff" class="btn btn-block btn-facebook btn-primary btn-lg" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading..."><span class="fa fa-facebook-square" style="padding-right:15px;"></span>Sign-In with Facebook</button>
 </form>
  
  <!--
