--- a/templates/results.html
+++ b/templates/results.html
@@ -235,7 +235,7 @@ body {margin:0;}
                 </form>
         </div>
 <div class="btn-group">
-                <form action="http://joobot-web.herokuapp.com/results/add_to_favorites/{{x[6]}}"><button type="submit" class="btn btn-success" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i>"><i class="fa fa-thumbs-up" aria-hidden="true"></i>Like</button></form>
+                <form action="http://joobot-web.herokuapp.com/results/add_to_favorites/{{x[6]}}"><button type="submit" class="btn btn-primary" id="loads" data-loading-text="<i class='fa fa-spinner fa-spin '></i>"><i class="fa fa-thumbs-up" aria-hidden="true"></i>Like</button></form>
           </div>
           </div>
             </td>
