--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,7 @@
 body {margin:0;}
 
 .icon_bar {
-	position: fixed;
-   
+	position: fixed;   
 	bottom: 0;
 	width: 100%;
     text-align: center;
@@ -56,7 +55,7 @@ body {margin:0;}
 }
 
 .icon_bar a:hover {
-    background-color: #000;
+    background-color: #01B5F0;
 }
 
 .active {
