--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -55,8 +55,9 @@ body {margin:0;}
     font-size: 36px;
 }
 .icon_bar a:hover {
-    background-color: #000;
+    background-color: #01B5F0;
 }
+
 .active {
     background-color: #58D3F7 !important;
 }
