--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -71,7 +71,7 @@ body {margin:0;}
     top: 0px;
     position:fixed;
     z-index:9999;
-    background:url("http://2.bp.blogspot.com/-JbBntT9YAY4/ViO_tqgWarI/AAAAAAAAAJk/9Q5Yyg4Hf8g/s1600-r/loading_cart.gif") 50% 50% no-repeat rgb(255,255,255);
+    background:url("../static/img/flickr.gif") 50% 50% no-repeat rgb(255,255,255);
 }
 
 
