--- a/templates/results.html
+++ b/templates/results.html
@@ -195,7 +195,7 @@ body {margin:0;}
 											<img src="{{x[4]}}" alt="" />
 											<h2>{{x[1]}}</h2>
 											<p>{{x[0]}}</p>
-											<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+											<a href="{{x[3]}}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Open in {{ x[5] }}</a>
 										</div>
 										<div class="product-overlay">
 											<div class="overlay-content">
