--- a/static/css/main.css
+++ b/static/css/main.css
@@ -883,8 +883,8 @@ h2.title {
 }
 
 .productinfo img{
- max-width: 200px;
-    height: 200px;
+  width: 200px;
+  height: 200px;
 }
 
 .productinfo{
