--- a/templates/joobot-login.html
+++ b/templates/joobot-login.html
@@ -52,7 +52,7 @@
 </head>
 
 
-<body id="page-top" class="index" background="../static/img/background2.png" style="background-size: cover; background-repeat: no-repeat">
+<body id="page-top" class="index" background="../static/img/background2.jpg" style="background-size: cover; background-repeat: no-repeat">
 
 
 
