--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -127,26 +127,28 @@ body {margin:0;}
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/joobot">Smart-Search</a>
+                       <li class="page-scroll">
+                        <a href="http://joobot-web.herokuapp.com/joobot"><i class="glyphicon glyphicon-search"></i>  Smart-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/my-space">My-Space</a>
+                        <a href="http://joobot-web.herokuapp.com/my-space"><i class="fa fa-home"></i>  My-Space</a>
                     </li>
+                    
                       <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/favorites">My Favorites</a>
+                        <a href="http://joobot-web.herokuapp.com/favorites"><i class="fa fa-heart"></i>  My Favorites</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/history">My History</a>
+                        <a href="http://joobot-web.herokuapp.com/history"><i class="fa fa-history"></i>  My History</a>
                     </li>
                                         <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/marketplace">Market Place</a>
+                        <a href="http://joobot-web.herokuapp.com/marketplace"><i class="fa fa-users"></i>  Market Place</a>
                     </li>
-                                    <li class="page-scroll">
-                        <a href="http://joobot-web.herokuapp.com/logout">Logout</a>
+                                                            <li class="page-scroll">
+                        <a href="http://joobot-web.herokuapp.com/logout"><i class="fa fa-sign-out" aria-hidden="true"></i>  Logout</a>
                     </li>
 
                 </ul>
+
             </div>
             <!-- /.navbar-collapse -->
         </div>
