--- a/templates/market.html
+++ b/templates/market.html
@@ -114,7 +114,7 @@ body {margin:0;}
 		                     <div class="col-sm-3 col-md-3">
         <form method="post" action="/search" class="navbar-form" role="search">
         <div class="input-group">
-            <input type="text" name="add" class="form-control" placeholder="Search">
+            <input type="text" name="add" class="form-control" placeholder="Smart-Search">
             <div class="input-group-btn">
                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
